stl-test/Tests/coordinate/bounds/Negative/test13.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord{55, 66}
    auto cord -= {77, 88};
}
